Added vendorjs file

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -12,6 +12,22 @@
   </head>
   <body>
 
+    <div class="hero-inner">
+			<div class="burger">
+				<div class="line1"></div>
+				<div class="line2"></div>
+				<div class="line3"></div>
+			</div>
+			<nav>
+					<ul class="nav-list">
+						<li class="nav-links"><a href="/">home</a></li>
+						<li class="nav-links"><a href="/">about</a></li>
+						<li class="nav-links"><a href="/">whatever</a></li>
+						<li class="nav-links"><a href="/">contact</a></li>
+					</ul>
+			</nav>
+		</div>
+
 {{ content | safe }}
 
 
