Amended eleventy.js

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -28,7 +28,9 @@
 			</nav>
 		</div>
 
-{{ content | safe }}
+		{% block content %}
+      {{ content | safe }}
+    {% endblock content %}
 
 
     <script src="/assets/vendor.js?<%- Date.now() %>"></script>
